// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getGroupAttributes Return basic attributes from array 1`] = `
Object {
  "border-bottom-left-radius-general": 40,
  "border-bottom-left-radius-l": undefined,
  "border-bottom-left-radius-m": undefined,
  "border-bottom-left-radius-s": undefined,
  "border-bottom-left-radius-xl": undefined,
  "border-bottom-left-radius-xs": undefined,
  "border-bottom-left-radius-xxl": undefined,
  "border-bottom-right-radius-general": 40,
  "border-bottom-right-radius-l": undefined,
  "border-bottom-right-radius-m": undefined,
  "border-bottom-right-radius-s": undefined,
  "border-bottom-right-radius-xl": undefined,
  "border-bottom-right-radius-xs": undefined,
  "border-bottom-right-radius-xxl": undefined,
  "border-bottom-width-general": 2,
  "border-bottom-width-l": undefined,
  "border-bottom-width-m": undefined,
  "border-bottom-width-s": undefined,
  "border-bottom-width-xl": undefined,
  "border-bottom-width-xs": undefined,
  "border-bottom-width-xxl": undefined,
  "border-color-general": "",
  "border-color-l": undefined,
  "border-color-m": undefined,
  "border-color-s": undefined,
  "border-color-xl": undefined,
  "border-color-xs": undefined,
  "border-color-xxl": undefined,
  "border-left-width-general": 2,
  "border-left-width-l": undefined,
  "border-left-width-m": undefined,
  "border-left-width-s": undefined,
  "border-left-width-xl": undefined,
  "border-left-width-xs": undefined,
  "border-left-width-xxl": undefined,
  "border-palette-color-general": 2,
  "border-palette-color-l": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-status-general": true,
  "border-palette-color-status-l": undefined,
  "border-palette-color-status-m": undefined,
  "border-palette-color-status-s": undefined,
  "border-palette-color-status-xl": undefined,
  "border-palette-color-status-xs": undefined,
  "border-palette-color-status-xxl": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-right-width-general": 2,
  "border-right-width-l": undefined,
  "border-right-width-m": undefined,
  "border-right-width-s": undefined,
  "border-right-width-xl": undefined,
  "border-right-width-xs": undefined,
  "border-right-width-xxl": undefined,
  "border-style-general": "solid",
  "border-style-l": undefined,
  "border-style-m": undefined,
  "border-style-s": undefined,
  "border-style-xl": undefined,
  "border-style-xs": undefined,
  "border-style-xxl": undefined,
  "border-sync-radius-general": true,
  "border-sync-radius-l": undefined,
  "border-sync-radius-m": undefined,
  "border-sync-radius-s": undefined,
  "border-sync-radius-xl": undefined,
  "border-sync-radius-xs": undefined,
  "border-sync-radius-xxl": undefined,
  "border-sync-width-general": true,
  "border-sync-width-l": undefined,
  "border-sync-width-m": undefined,
  "border-sync-width-s": undefined,
  "border-sync-width-xl": undefined,
  "border-sync-width-xs": undefined,
  "border-sync-width-xxl": undefined,
  "border-top-left-radius-general": 40,
  "border-top-left-radius-l": undefined,
  "border-top-left-radius-m": undefined,
  "border-top-left-radius-s": undefined,
  "border-top-left-radius-xl": undefined,
  "border-top-left-radius-xs": undefined,
  "border-top-left-radius-xxl": undefined,
  "border-top-right-radius-general": 40,
  "border-top-right-radius-l": undefined,
  "border-top-right-radius-m": undefined,
  "border-top-right-radius-s": undefined,
  "border-top-right-radius-xl": undefined,
  "border-top-right-radius-xs": undefined,
  "border-top-right-radius-xxl": undefined,
  "border-top-width-general": 2,
  "border-top-width-l": undefined,
  "border-top-width-m": undefined,
  "border-top-width-s": undefined,
  "border-top-width-xl": undefined,
  "border-top-width-xs": undefined,
  "border-top-width-xxl": undefined,
  "border-unit-radius-general": "px",
  "border-unit-radius-l": undefined,
  "border-unit-radius-m": undefined,
  "border-unit-radius-s": undefined,
  "border-unit-radius-xl": undefined,
  "border-unit-radius-xs": undefined,
  "border-unit-radius-xxl": undefined,
  "border-unit-width-general": "px",
  "border-unit-width-l": undefined,
  "border-unit-width-m": undefined,
  "border-unit-width-s": undefined,
  "border-unit-width-xl": undefined,
  "border-unit-width-xs": undefined,
  "border-unit-width-xxl": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from array with hover 1`] = `
Object {
  "border-bottom-left-radius-general": 40,
  "border-bottom-left-radius-general-hover": 4,
  "border-bottom-left-radius-l": undefined,
  "border-bottom-left-radius-l-hover": undefined,
  "border-bottom-left-radius-m": undefined,
  "border-bottom-left-radius-m-hover": undefined,
  "border-bottom-left-radius-s": undefined,
  "border-bottom-left-radius-s-hover": undefined,
  "border-bottom-left-radius-xl": undefined,
  "border-bottom-left-radius-xl-hover": undefined,
  "border-bottom-left-radius-xs": undefined,
  "border-bottom-left-radius-xs-hover": undefined,
  "border-bottom-left-radius-xxl": undefined,
  "border-bottom-left-radius-xxl-hover": undefined,
  "border-bottom-right-radius-general": 40,
  "border-bottom-right-radius-general-hover": 4,
  "border-bottom-right-radius-l": undefined,
  "border-bottom-right-radius-l-hover": undefined,
  "border-bottom-right-radius-m": undefined,
  "border-bottom-right-radius-m-hover": undefined,
  "border-bottom-right-radius-s": undefined,
  "border-bottom-right-radius-s-hover": undefined,
  "border-bottom-right-radius-xl": undefined,
  "border-bottom-right-radius-xl-hover": undefined,
  "border-bottom-right-radius-xs": undefined,
  "border-bottom-right-radius-xs-hover": undefined,
  "border-bottom-right-radius-xxl": undefined,
  "border-bottom-right-radius-xxl-hover": undefined,
  "border-bottom-width-general": 2,
  "border-bottom-width-general-hover": 10,
  "border-bottom-width-l": undefined,
  "border-bottom-width-l-hover": undefined,
  "border-bottom-width-m": undefined,
  "border-bottom-width-m-hover": undefined,
  "border-bottom-width-s": undefined,
  "border-bottom-width-s-hover": undefined,
  "border-bottom-width-xl": undefined,
  "border-bottom-width-xl-hover": undefined,
  "border-bottom-width-xs": undefined,
  "border-bottom-width-xs-hover": undefined,
  "border-bottom-width-xxl": undefined,
  "border-bottom-width-xxl-hover": undefined,
  "border-color-general": "",
  "border-color-general-hover": undefined,
  "border-color-l": undefined,
  "border-color-l-hover": undefined,
  "border-color-m": undefined,
  "border-color-m-hover": undefined,
  "border-color-s": undefined,
  "border-color-s-hover": undefined,
  "border-color-xl": undefined,
  "border-color-xl-hover": undefined,
  "border-color-xs": undefined,
  "border-color-xs-hover": undefined,
  "border-color-xxl": undefined,
  "border-color-xxl-hover": undefined,
  "border-left-width-general": 2,
  "border-left-width-general-hover": 10,
  "border-left-width-l": undefined,
  "border-left-width-l-hover": undefined,
  "border-left-width-m": undefined,
  "border-left-width-m-hover": undefined,
  "border-left-width-s": undefined,
  "border-left-width-s-hover": undefined,
  "border-left-width-xl": undefined,
  "border-left-width-xl-hover": undefined,
  "border-left-width-xs": undefined,
  "border-left-width-xs-hover": undefined,
  "border-left-width-xxl": undefined,
  "border-left-width-xxl-hover": undefined,
  "border-palette-color-general": 2,
  "border-palette-color-general-hover": 3,
  "border-palette-color-l": undefined,
  "border-palette-color-l-hover": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-m-hover": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-s-hover": undefined,
  "border-palette-color-status-general": true,
  "border-palette-color-status-general-hover": true,
  "border-palette-color-status-l": undefined,
  "border-palette-color-status-l-hover": undefined,
  "border-palette-color-status-m": undefined,
  "border-palette-color-status-m-hover": undefined,
  "border-palette-color-status-s": undefined,
  "border-palette-color-status-s-hover": undefined,
  "border-palette-color-status-xl": undefined,
  "border-palette-color-status-xl-hover": undefined,
  "border-palette-color-status-xs": undefined,
  "border-palette-color-status-xs-hover": undefined,
  "border-palette-color-status-xxl": undefined,
  "border-palette-color-status-xxl-hover": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xl-hover": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xs-hover": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-color-xxl-hover": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-general-hover": 48,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-l-hover": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-m-hover": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-s-hover": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xl-hover": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xs-hover": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-opacity-xxl-hover": undefined,
  "border-right-width-general": 2,
  "border-right-width-general-hover": 10,
  "border-right-width-l": undefined,
  "border-right-width-l-hover": undefined,
  "border-right-width-m": undefined,
  "border-right-width-m-hover": undefined,
  "border-right-width-s": undefined,
  "border-right-width-s-hover": undefined,
  "border-right-width-xl": undefined,
  "border-right-width-xl-hover": undefined,
  "border-right-width-xs": undefined,
  "border-right-width-xs-hover": undefined,
  "border-right-width-xxl": undefined,
  "border-right-width-xxl-hover": undefined,
  "border-status-hover": true,
  "border-style-general": "solid",
  "border-style-general-hover": "dashed",
  "border-style-l": undefined,
  "border-style-l-hover": undefined,
  "border-style-m": undefined,
  "border-style-m-hover": undefined,
  "border-style-s": undefined,
  "border-style-s-hover": undefined,
  "border-style-xl": undefined,
  "border-style-xl-hover": undefined,
  "border-style-xs": undefined,
  "border-style-xs-hover": undefined,
  "border-style-xxl": undefined,
  "border-style-xxl-hover": undefined,
  "border-sync-radius-general": true,
  "border-sync-radius-general-hover": true,
  "border-sync-radius-l": undefined,
  "border-sync-radius-l-hover": undefined,
  "border-sync-radius-m": undefined,
  "border-sync-radius-m-hover": undefined,
  "border-sync-radius-s": undefined,
  "border-sync-radius-s-hover": undefined,
  "border-sync-radius-xl": undefined,
  "border-sync-radius-xl-hover": undefined,
  "border-sync-radius-xs": undefined,
  "border-sync-radius-xs-hover": undefined,
  "border-sync-radius-xxl": undefined,
  "border-sync-radius-xxl-hover": undefined,
  "border-sync-width-general": true,
  "border-sync-width-general-hover": true,
  "border-sync-width-l": undefined,
  "border-sync-width-l-hover": undefined,
  "border-sync-width-m": undefined,
  "border-sync-width-m-hover": undefined,
  "border-sync-width-s": undefined,
  "border-sync-width-s-hover": undefined,
  "border-sync-width-xl": undefined,
  "border-sync-width-xl-hover": undefined,
  "border-sync-width-xs": undefined,
  "border-sync-width-xs-hover": undefined,
  "border-sync-width-xxl": undefined,
  "border-sync-width-xxl-hover": undefined,
  "border-top-left-radius-general": 40,
  "border-top-left-radius-general-hover": 4,
  "border-top-left-radius-l": undefined,
  "border-top-left-radius-l-hover": undefined,
  "border-top-left-radius-m": undefined,
  "border-top-left-radius-m-hover": undefined,
  "border-top-left-radius-s": undefined,
  "border-top-left-radius-s-hover": undefined,
  "border-top-left-radius-xl": undefined,
  "border-top-left-radius-xl-hover": undefined,
  "border-top-left-radius-xs": undefined,
  "border-top-left-radius-xs-hover": undefined,
  "border-top-left-radius-xxl": undefined,
  "border-top-left-radius-xxl-hover": undefined,
  "border-top-right-radius-general": 40,
  "border-top-right-radius-general-hover": 4,
  "border-top-right-radius-l": undefined,
  "border-top-right-radius-l-hover": undefined,
  "border-top-right-radius-m": undefined,
  "border-top-right-radius-m-hover": undefined,
  "border-top-right-radius-s": undefined,
  "border-top-right-radius-s-hover": undefined,
  "border-top-right-radius-xl": undefined,
  "border-top-right-radius-xl-hover": undefined,
  "border-top-right-radius-xs": undefined,
  "border-top-right-radius-xs-hover": undefined,
  "border-top-right-radius-xxl": undefined,
  "border-top-right-radius-xxl-hover": undefined,
  "border-top-width-general": 2,
  "border-top-width-general-hover": 10,
  "border-top-width-l": undefined,
  "border-top-width-l-hover": undefined,
  "border-top-width-m": undefined,
  "border-top-width-m-hover": undefined,
  "border-top-width-s": undefined,
  "border-top-width-s-hover": undefined,
  "border-top-width-xl": undefined,
  "border-top-width-xl-hover": undefined,
  "border-top-width-xs": undefined,
  "border-top-width-xs-hover": undefined,
  "border-top-width-xxl": undefined,
  "border-top-width-xxl-hover": undefined,
  "border-unit-radius-general": "px",
  "border-unit-radius-general-hover": "px",
  "border-unit-radius-l": undefined,
  "border-unit-radius-l-hover": undefined,
  "border-unit-radius-m": undefined,
  "border-unit-radius-m-hover": undefined,
  "border-unit-radius-s": undefined,
  "border-unit-radius-s-hover": undefined,
  "border-unit-radius-xl": undefined,
  "border-unit-radius-xl-hover": undefined,
  "border-unit-radius-xs": undefined,
  "border-unit-radius-xs-hover": undefined,
  "border-unit-radius-xxl": undefined,
  "border-unit-radius-xxl-hover": undefined,
  "border-unit-width-general": "px",
  "border-unit-width-general-hover": "px",
  "border-unit-width-l": undefined,
  "border-unit-width-l-hover": undefined,
  "border-unit-width-m": undefined,
  "border-unit-width-m-hover": undefined,
  "border-unit-width-s": undefined,
  "border-unit-width-s-hover": undefined,
  "border-unit-width-xl": undefined,
  "border-unit-width-xl-hover": undefined,
  "border-unit-width-xs": undefined,
  "border-unit-width-xs-hover": undefined,
  "border-unit-width-xxl": undefined,
  "border-unit-width-xxl-hover": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string 1`] = `
Object {
  "border-color-general": "",
  "border-color-l": undefined,
  "border-color-m": undefined,
  "border-color-s": undefined,
  "border-color-xl": undefined,
  "border-color-xs": undefined,
  "border-color-xxl": undefined,
  "border-palette-color-general": 2,
  "border-palette-color-l": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-status-general": true,
  "border-palette-color-status-l": undefined,
  "border-palette-color-status-m": undefined,
  "border-palette-color-status-s": undefined,
  "border-palette-color-status-xl": undefined,
  "border-palette-color-status-xs": undefined,
  "border-palette-color-status-xxl": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-style-general": "solid",
  "border-style-l": undefined,
  "border-style-m": undefined,
  "border-style-s": undefined,
  "border-style-xl": undefined,
  "border-style-xs": undefined,
  "border-style-xxl": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string with hover 1`] = `
Object {
  "border-color-general": "",
  "border-color-general-hover": undefined,
  "border-color-l": undefined,
  "border-color-l-hover": undefined,
  "border-color-m": undefined,
  "border-color-m-hover": undefined,
  "border-color-s": undefined,
  "border-color-s-hover": undefined,
  "border-color-xl": undefined,
  "border-color-xl-hover": undefined,
  "border-color-xs": undefined,
  "border-color-xs-hover": undefined,
  "border-color-xxl": undefined,
  "border-color-xxl-hover": undefined,
  "border-palette-color-general": 2,
  "border-palette-color-general-hover": 3,
  "border-palette-color-l": undefined,
  "border-palette-color-l-hover": undefined,
  "border-palette-color-m": undefined,
  "border-palette-color-m-hover": undefined,
  "border-palette-color-s": undefined,
  "border-palette-color-s-hover": undefined,
  "border-palette-color-status-general": true,
  "border-palette-color-status-general-hover": true,
  "border-palette-color-status-l": undefined,
  "border-palette-color-status-l-hover": undefined,
  "border-palette-color-status-m": undefined,
  "border-palette-color-status-m-hover": undefined,
  "border-palette-color-status-s": undefined,
  "border-palette-color-status-s-hover": undefined,
  "border-palette-color-status-xl": undefined,
  "border-palette-color-status-xl-hover": undefined,
  "border-palette-color-status-xs": undefined,
  "border-palette-color-status-xs-hover": undefined,
  "border-palette-color-status-xxl": undefined,
  "border-palette-color-status-xxl-hover": undefined,
  "border-palette-color-xl": undefined,
  "border-palette-color-xl-hover": undefined,
  "border-palette-color-xs": undefined,
  "border-palette-color-xs-hover": undefined,
  "border-palette-color-xxl": undefined,
  "border-palette-color-xxl-hover": undefined,
  "border-palette-opacity-general": undefined,
  "border-palette-opacity-general-hover": 48,
  "border-palette-opacity-l": undefined,
  "border-palette-opacity-l-hover": undefined,
  "border-palette-opacity-m": undefined,
  "border-palette-opacity-m-hover": undefined,
  "border-palette-opacity-s": undefined,
  "border-palette-opacity-s-hover": undefined,
  "border-palette-opacity-xl": undefined,
  "border-palette-opacity-xl-hover": undefined,
  "border-palette-opacity-xs": undefined,
  "border-palette-opacity-xs-hover": undefined,
  "border-palette-opacity-xxl": undefined,
  "border-palette-opacity-xxl-hover": undefined,
  "border-status-hover": true,
  "border-style-general": "solid",
  "border-style-general-hover": "dashed",
  "border-style-l": undefined,
  "border-style-l-hover": undefined,
  "border-style-m": undefined,
  "border-style-m-hover": undefined,
  "border-style-s": undefined,
  "border-style-s-hover": undefined,
  "border-style-xl": undefined,
  "border-style-xl-hover": undefined,
  "border-style-xs": undefined,
  "border-style-xs-hover": undefined,
  "border-style-xxl": undefined,
  "border-style-xxl-hover": undefined,
}
`;

exports[`getGroupAttributes Return basic attributes from string with prefix 1`] = `
Object {
  "parallax-background-image-attachment-general": "scroll",
  "parallax-background-image-attachment-l": undefined,
  "parallax-background-image-attachment-m": undefined,
  "parallax-background-image-attachment-s": undefined,
  "parallax-background-image-attachment-xl": undefined,
  "parallax-background-image-attachment-xs": undefined,
  "parallax-background-image-attachment-xxl": undefined,
  "parallax-background-image-clip-general": "border-box",
  "parallax-background-image-clip-l": undefined,
  "parallax-background-image-clip-m": undefined,
  "parallax-background-image-clip-path-general": undefined,
  "parallax-background-image-clip-path-l": undefined,
  "parallax-background-image-clip-path-m": undefined,
  "parallax-background-image-clip-path-s": undefined,
  "parallax-background-image-clip-path-xl": undefined,
  "parallax-background-image-clip-path-xs": undefined,
  "parallax-background-image-clip-path-xxl": undefined,
  "parallax-background-image-clip-s": undefined,
  "parallax-background-image-clip-xl": undefined,
  "parallax-background-image-clip-xs": undefined,
  "parallax-background-image-clip-xxl": undefined,
  "parallax-background-image-crop-options-general": undefined,
  "parallax-background-image-crop-options-l": undefined,
  "parallax-background-image-crop-options-m": undefined,
  "parallax-background-image-crop-options-s": undefined,
  "parallax-background-image-crop-options-xl": undefined,
  "parallax-background-image-crop-options-xs": undefined,
  "parallax-background-image-crop-options-xxl": undefined,
  "parallax-background-image-height-general": 600,
  "parallax-background-image-height-l": undefined,
  "parallax-background-image-height-m": undefined,
  "parallax-background-image-height-s": undefined,
  "parallax-background-image-height-unit-general": "%",
  "parallax-background-image-height-unit-l": undefined,
  "parallax-background-image-height-unit-m": undefined,
  "parallax-background-image-height-unit-s": undefined,
  "parallax-background-image-height-unit-xl": undefined,
  "parallax-background-image-height-unit-xs": undefined,
  "parallax-background-image-height-unit-xxl": undefined,
  "parallax-background-image-height-xl": 600,
  "parallax-background-image-height-xs": undefined,
  "parallax-background-image-height-xxl": undefined,
  "parallax-background-image-mediaID-general": 226,
  "parallax-background-image-mediaID-l": undefined,
  "parallax-background-image-mediaID-m": undefined,
  "parallax-background-image-mediaID-s": undefined,
  "parallax-background-image-mediaID-xl": 226,
  "parallax-background-image-mediaID-xs": undefined,
  "parallax-background-image-mediaID-xxl": undefined,
  "parallax-background-image-mediaURL-general": "http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg",
  "parallax-background-image-mediaURL-l": undefined,
  "parallax-background-image-mediaURL-m": undefined,
  "parallax-background-image-mediaURL-s": undefined,
  "parallax-background-image-mediaURL-xl": "http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg",
  "parallax-background-image-mediaURL-xs": undefined,
  "parallax-background-image-mediaURL-xxl": undefined,
  "parallax-background-image-opacity-general": 0.59,
  "parallax-background-image-opacity-l": undefined,
  "parallax-background-image-opacity-m": undefined,
  "parallax-background-image-opacity-s": undefined,
  "parallax-background-image-opacity-xl": 0.59,
  "parallax-background-image-opacity-xs": undefined,
  "parallax-background-image-opacity-xxl": undefined,
  "parallax-background-image-origin-general": "padding-box",
  "parallax-background-image-origin-l": undefined,
  "parallax-background-image-origin-m": undefined,
  "parallax-background-image-origin-s": undefined,
  "parallax-background-image-origin-xl": undefined,
  "parallax-background-image-origin-xs": undefined,
  "parallax-background-image-origin-xxl": undefined,
  "parallax-background-image-position-general": "center center",
  "parallax-background-image-position-height-general": 0,
  "parallax-background-image-position-height-l": undefined,
  "parallax-background-image-position-height-m": undefined,
  "parallax-background-image-position-height-s": undefined,
  "parallax-background-image-position-height-unit-general": "%",
  "parallax-background-image-position-height-unit-l": undefined,
  "parallax-background-image-position-height-unit-m": undefined,
  "parallax-background-image-position-height-unit-s": undefined,
  "parallax-background-image-position-height-unit-xl": undefined,
  "parallax-background-image-position-height-unit-xs": undefined,
  "parallax-background-image-position-height-unit-xxl": undefined,
  "parallax-background-image-position-height-xl": undefined,
  "parallax-background-image-position-height-xs": undefined,
  "parallax-background-image-position-height-xxl": undefined,
  "parallax-background-image-position-l": undefined,
  "parallax-background-image-position-m": undefined,
  "parallax-background-image-position-s": undefined,
  "parallax-background-image-position-width-general": 0,
  "parallax-background-image-position-width-l": undefined,
  "parallax-background-image-position-width-m": undefined,
  "parallax-background-image-position-width-s": undefined,
  "parallax-background-image-position-width-unit-general": "%",
  "parallax-background-image-position-width-unit-l": undefined,
  "parallax-background-image-position-width-unit-m": undefined,
  "parallax-background-image-position-width-unit-s": undefined,
  "parallax-background-image-position-width-unit-xl": undefined,
  "parallax-background-image-position-width-unit-xs": undefined,
  "parallax-background-image-position-width-unit-xxl": undefined,
  "parallax-background-image-position-width-xl": undefined,
  "parallax-background-image-position-width-xs": undefined,
  "parallax-background-image-position-width-xxl": undefined,
  "parallax-background-image-position-xl": undefined,
  "parallax-background-image-position-xs": undefined,
  "parallax-background-image-position-xxl": undefined,
  "parallax-background-image-repeat-general": "no-repeat",
  "parallax-background-image-repeat-l": undefined,
  "parallax-background-image-repeat-m": undefined,
  "parallax-background-image-repeat-s": undefined,
  "parallax-background-image-repeat-xl": undefined,
  "parallax-background-image-repeat-xs": undefined,
  "parallax-background-image-repeat-xxl": undefined,
  "parallax-background-image-size-general": "auto",
  "parallax-background-image-size-l": undefined,
  "parallax-background-image-size-m": undefined,
  "parallax-background-image-size-s": undefined,
  "parallax-background-image-size-xl": undefined,
  "parallax-background-image-size-xs": undefined,
  "parallax-background-image-size-xxl": undefined,
  "parallax-background-image-width-general": 600,
  "parallax-background-image-width-l": undefined,
  "parallax-background-image-width-m": undefined,
  "parallax-background-image-width-s": undefined,
  "parallax-background-image-width-unit-general": "%",
  "parallax-background-image-width-unit-l": undefined,
  "parallax-background-image-width-unit-m": undefined,
  "parallax-background-image-width-unit-s": undefined,
  "parallax-background-image-width-unit-xl": undefined,
  "parallax-background-image-width-unit-xs": undefined,
  "parallax-background-image-width-unit-xxl": undefined,
  "parallax-background-image-width-xl": 600,
  "parallax-background-image-width-xs": undefined,
  "parallax-background-image-width-xxl": undefined,
}
`;
